# atto

./: .gitignore  Cargo.toml  LICENSE  README.adoc  flake.nix
.forgejo/workflows/: flake.yml  rust.yml
.github/workflows/: rust.yml
data/: Atto.desktop
src/: buffer.rs  clipboard.rs  find.rs  handle_event.rs  help.rs  input.rs  logging.rs  lsp.rs  main.rs  model.rs  notification.rs  parse.rs  suspend.rs  syntect_tui.rs  themes.rs  undo.rs  utilities.rs  view.rs  watcher.rs  wrap.rs
src/buffer/: highlight.rs
src/docs/: help.txt
src/model/: find.rs  widgets.rs
src/utilities/: confirm.rs  developer.rs  find.rs  help.rs  save_as.rs  shell.rs
syntect-tui/: Cargo.toml
