[package]
name = "atto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.27"
custom_error = "1.9.2"
ratatui = "0.26"
syntect = "5.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tui-logger = "0.10.0"

[dev-dependencies]
rstest = "0.15"
