[package]
name = "atto"
version = "1.0.9"
edition = "2021"
description = "An experimental terminal text editor"
license = "MIT"
authors = ["LevitatingBusinessMan"]
homepage = "https://github.com/LevitatingBusinessMan/atto"
repository = "https://github.com/LevitatingBusinessMan/atto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["onig"]
onig = ["syntect/default-onig"]
fancy_regex = ["syntect/default-fancy"]

[dependencies]
anyhow = "1.0.76"
clap = { version = "4.5", features = ["derive", "cargo"] }
color-eyre = "0.6.2"
crossterm = "0.28"
custom_error = "1.9.2"
dirs = "5.0.1"
indoc = "2.0.5"
# this should be a non-windows depend
nix = { version = "0.29", features = ["poll"] }
ratatui = "0.29"
syntect = { version = "5.1", default-features = false }
textwrap = "0.16.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tui-logger = "0.10.0"
unicode-segmentation = "1.12.0"

[dev-dependencies]
rstest = "0.15"
