[package]
name = "atto"
version = "1.9.2"
edition = "2021"
description = "An experimental terminal text editor"
license = "MIT"
authors = ["LevitatingBusinessMan"]
homepage = "https://git.levitati.ng/LevitatingBusinessMan/atto"
repository = "https://git.levitati.ng/LevitatingBusinessMan/atto"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["onig"]
onig = ["syntect/default-onig"]
fancy_regex = ["syntect/default-fancy"]

[dependencies]
anyhow = "1.0.76"
arboard = { version = "3.6.1", features = ["wayland-data-control"] }
clap = { version = "4.5", features = ["derive", "cargo"] }
color-eyre = "0.6.2"
crossterm = "0.28"
custom_error = "1.9.2"
dirs = "5.0.1"
indoc = "2.0.5"
# this should be a non-windows depend
nix = { version = "0.29", features = ["poll", "signal", "process", "term"] }
ratatui = "0.29"
syntect = { version = "5.1", default-features = false }
textwrap = "0.16.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tui-logger = "0.10.0"
unicode-linebreak = "0.1.5"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
which = "7.0.3"

[dev-dependencies]
rstest = "0.15"

[profile.release]
overflow-checks = true

[profile.samply]
inherits = "release"
debug = true
